--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "@storybook/node-logger": "6.3.12",
     "@storybook/preset-create-react-app": "3.2.0",
     "@storybook/react": "6.3.12",
-    "autoprefixer": "9.8.8",
+    "autoprefixer": "^9.8.8",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
-    "postcss": "7.0.39",
+    "postcss": "^7.0.39",
     "prettier": "2.4.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@2.2.17"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "browserslist": {
     "production": [
