--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
-    "antd": "4.16.13",
+    "antd": "^4.17.2",
     "date-fns": "2.25.0",
+    "highcharts": "^9.3.2",
     "highcharts-react-official": "3.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -54,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "babel-loader": "8.1.0"
   }
 }
