--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "antd": "^4.17.2",
+    "axios": "^0.24.0",
     "date-fns": "2.25.0",
     "highcharts": "^9.3.2",
     "highcharts-react-official": "3.1.0",
