--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "ag-grid-community": "^26.2.1",
+    "ag-grid-react": "^26.2.0",
     "antd": "^4.17.2",
     "axios": "^0.24.0",
     "date-fns": "2.25.0",
@@ -25,6 +27,7 @@
     "highcharts-react-official": "3.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dom-factories": "^1.0.2",
     "react-redux": "7.2.6",
     "react-router": "6.0.2",
     "react-router-dom": "6.0.2",
