--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dom-factories": "^1.0.2",
+    "react-nice-avatar": "^1.2.4",
     "react-redux": "7.2.6",
     "react-router": "6.0.2",
     "react-router-dom": "6.0.2",
